--- a/about.html
+++ b/about.html
@@ -44,10 +44,11 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="fundamentals.html" class="nav-link">The Fundamentals</a></li>
+          <!-- <li class="nav-item"><a href="fundamentals.html" class="nav-link">The Fundamentals</a></li> -->
           <li class="nav-item"><a href="event.html" class="nav-link">Events</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link">Magazines</a></li>
           <li class="nav-item"><a href="team1.html" class="nav-link">Team</a></li>
+          <li class="nav-item"><a href="sponsors.html" class="nav-link">Sponsors</a></li>
           <!-- <li class="nav-item"><a href="https://ecellvitpune.com/esummit/" class="nav-link">Esummit '23</a></li> -->
           <!-- <li class="nav-item"><a href="Connectus.html" class="nav-link">Connect with us</a></li> -->
           <li class="nav-item"><a href="gallery1.html" class="nav-link">Gallery</a></li>
@@ -127,7 +128,11 @@
           <br><br>
           <header class="section-header" style="margin-top:40px;">
             <h3 class="text-center">Message from us!</h3><hr>
-            <p>2022 is the ninth year since the inception of V-EDC and it has been an incredible journey. We have achieved great success in fulfilling our mission of motivating students to take up entrepreneurship and we wish to continue doing the same in an increasingly dynamic manner.<br><br>Entrepreneurship is omnipresent in a passive way. We have tried our best to clear doubts and apprehensions about entrepreneurship and provide a platform for imbibing leadership skills in the students and the faculty in a more simplified manner. All the activities conducted by V-EDC have groomed the team and the students to face the challenges that an entrepreneur faces on a regular basis. We work like an organization with different departments run by the students themselves, just like any small scale company would! We wish to get your support in our future endeavors so that we can fly higher and build good relationships with you that benefit the both of us.</p>
+            <p>The year 2023 represents a significant and noteworthy milestone for V-EDC, as we commemorate an entire decade of unwavering commitment to empowering the next generation of entrepreneurs. The journey we have embarked upon over the past ten years has been nothing short of extraordinary, characterized by a multitude of remarkable achievements in the pursuit of our mission.</p>
+
+              <p>In our relentless quest to demystify the intricate world of entrepreneurship, V-EDC has emerged as a nurturing crucible for the cultivation of leadership prowess among both our esteemed students and dedicated faculty members. The diverse spectrum of meticulously curated activities orchestrated by V-EDC has not only served to sharpen our organizational acumen but has also effectively equipped our students with the requisite skill set necessary to confront and conquer the daily trials and tribulations encountered by entrepreneurs. Our operational paradigm closely mirrors that of a dynamic and self-sustaining enterprise, with each of our departments being propelled by the very students they are designed to serve, thereby encapsulating the quintessence of a thriving small-scale enterprise.</p>
+
+              <p>As we embark upon this new and promising chapter in our journey, we humbly seek and eagerly anticipate your continued support. Together, we can aspire to scale even greater heights and cultivate enduring partnerships that will undoubtedly yield reciprocal benefits. Here's to looking forward with great enthusiasm to another decade of unwavering commitment to fostering innovation, nurturing dreams, and meticulously shaping the entrepreneurs of tomorrow!</p>
           </header>
           </div>
     		</div>
@@ -193,7 +198,7 @@
 	                <li><span class="icon icon-map-marker"></span><span class="text">Vishwakarma Institute of Technology
                     666, Upper Indiranagar, Bibwewadi,
                     Pune, Maharashtra, India - 411 037</span></li>
-	                <li><a><span class="icon icon-phone"></span><span class="text">+91 87888 15238</span></a></li>
+	                <li><a><span class="icon icon-phone"></span><span class="text">+91 9769965018</span></a></li>
                   <li><a href="mailto: edc@vit.edu"><span class="icon icon-envelope"></span><span class="text">edc@vit.edu</span></a></li>
 	              </ul>
 	            </div>
