--- a/blog.html
+++ b/blog.html
@@ -29,12 +29,7 @@
     <link rel="icon" href="images/logo.png" type="image/icon type">
   </head>
   <body>
-    
-    <style>
-      .ftco-section{
-        text-align: justify;
-      }
-    </style>
+
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
@@ -49,10 +44,11 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="fundamentals.html" class="nav-link">The Fundamentals</a></li>
+          <!-- <li class="nav-item"><a href="fundamentals.html" class="nav-link">The Fundamentals</a></li> -->
           <li class="nav-item"><a href="event.html" class="nav-link">Events</a></li>
           <li class="nav-item active"><a class="nav-link">Magazines</a></li>
           <li class="nav-item"><a href="team1.html" class="nav-link">Team</a></li>
+          <li class="nav-item"><a href="sponsors.html" class="nav-link">Sponsors</a></li>
           <!-- <li class="nav-item"><a href="https://ecellvitpune.com/esummit/" class="nav-link">Esummit '23</a></li> -->
           <!-- <li class="nav-item"><a href="Connectus.html" class="nav-link">Connect with us</a></li> -->
           <li class="nav-item"><a href="gallery1.html" class="nav-link">Gallery</a></li>
@@ -70,7 +66,6 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-7 ftco-animate text-center" data-scrollax=" properties: { translateY: '70%' }">
-             <p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-2"><a href="index.html">Home</a></span></p>
             <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Magazines</h1>
           </div>
         </div>
@@ -236,7 +231,7 @@
                         <li><span class="icon icon-map-marker"></span><span class="text">Vishwakarma Institute of Technology
                           666, Upper Indiranagar, Bibwewadi,
                           Pune, Maharashtra, India - 411 037</span></li>
-                        <li><a><span class="icon icon-phone"></span><span class="text">+91 87888 15238</span></a></li>
+                        <li><a><span class="icon icon-phone"></span><span class="text">+91 9769965018</span></a></li>
                         <li><a href="mailto: edc@vit.edu"><span class="icon icon-envelope"></span><span class="text">edc@vit.edu</span></a></li>
                       </ul>
                     </div>
