--- a/gallery1.html
+++ b/gallery1.html
@@ -45,10 +45,11 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="fundamentals.html" class="nav-link">The Fundamentals</a></li>
+          <!-- <li class="nav-item"><a href="fundamentals.html" class="nav-link">The Fundamentals</a></li> -->
           <li class="nav-item"><a href="event.html" class="nav-link">Events</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link">Magazines</a></li>
           <li class="nav-item"><a href="team1.html" class="nav-link">Team</a></li>
+          <li class="nav-item"><a href="sponsors.html" class="nav-link">Sponsors</a></li>
           <!-- <li class="nav-item"><a href="https://ecellvitpune.com/esummit/" class="nav-link">Esummit '23</a></li> -->
           <!-- <li class="nav-item"><a href="Connectus.html" class="nav-link">Connect with us</a></li> -->
           <li class="nav-item active"><a href="gallery1.html" class="nav-link">Gallery</a></li>
@@ -203,7 +204,7 @@
 	                <li><span class="icon icon-map-marker"></span><span class="text">Vishwakarma Institute of Technology
                     666, Upper Indiranagar, Bibwewadi,
                     Pune, Maharashtra, India - 411 037</span></li>
-	                <li><a><span class="icon icon-phone"></span><span class="text">+91 87888 15238</span></a></li>
+	                <li><a><span class="icon icon-phone"></span><span class="text">+91 9769965018</span></a></li>
 	                <li><a href="mailto: edc@vit.edu"><span class="icon icon-envelope"></span><span class="text">edc@vit.edu</span></a></li>
 	              </ul>
 	            </div>
